changing the variable u by q -> validated in 1d and 2d cartesian with boundary conditions in both cases

--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -154,6 +154,7 @@ CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_2DRie
 CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_2DCylinderDeflection.cxx  "${libs_for_tests}" "C++ fv Euler barotropic Staggered 2d cylinder coreflows" )
 CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_2DWall_StructuredSquares.cxx  "${libs_for_tests}" "C++ fv Eulerbarotropic Staggered structured coreflows" )
 CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_2DRealRiemann_Cartesian.cxx  "${libs_for_tests}" "C++ fv Eulerbarotropic Staggered structured coreflows" )
+CreateTestExecAndInstall(EulerBarotropicStaggered/EulerBarotropicStaggered_2DStatio.cxx  "${libs_for_tests}" "C++ fv Euler barotropic Staggered 2d cylinder coreflows" )
 
 
 if( SOLVERLAB_WITH_MPI )#Tests parallèles
