--- a/CoreFlows/examples/C/CMakeLists.txt
+++ b/CoreFlows/examples/C/CMakeLists.txt
@@ -146,6 +146,7 @@ set_property (TEST WaveSystem_3DFV_SphericalExplosion_CDMATH_TETRAHEDRON.exe PRO
 #################### Wave staggered
 CreateTestExecAndInstall(WaveStaggered/WaveStaggered_1DRiemannProblem.cxx  "${libs_for_tests}" "C++ fv Wave Staggerd structured coreflows" )
 CreateTestExecAndInstall(WaveStaggered/WaveStaggered_2DCylinderDeflection.cxx  "${libs_for_tests}" "C++ fv Wave Staggerd structured coreflows" )
+CreateTestExecAndInstall(WaveStaggered/WaveStaggered_2DStatio.cxx  "${libs_for_tests}" "C++ fv Wave Staggerd structured coreflows" )
 CreateTestExecAndInstall(WaveStaggered/WaveStaggered_2DRiemann_StructuredSquares.cxx  "${libs_for_tests}" "C++ fv Wave Staggerd structured coreflows" )
 
 ################### Euler Barotropic staggered
