--- a/CoreFlows/examples/Python/CMakeLists.txt
+++ b/CoreFlows/examples/Python/CMakeLists.txt
@@ -158,6 +158,7 @@ CreatePythonTest(StationaryDiffusionEquation/StationaryDiffusionEquation_3DVF_Ro
 CreatePythonTest(StationaryDiffusionEquation/StationaryDiffusionEquation_3DVF_RoomCooling_UnstructuredTetras.py "Python fv stationary diffusion 3D dirichlet unstructured tetrahedra CUBE coreflows")
 
 
+CreatePythonTest(WaveStaggered/MeshConvergence.py "Python fv Wave staggered 1D test for wall boundary conditions on left wall structured coreflows")
 CreatePythonTest(WaveStaggered/WaveStaggered_1DWall.py "Python fv Wave staggered 1D test for wall boundary conditions on left wall structured coreflows")
 CreatePythonTest(WaveStaggered/WaveStaggered_1DRiemannProblem.py "Python fv Wave staggered 1D test for wall boundary conditions on left wall structured coreflows")
 CreatePythonTest(WaveStaggered/WaveStaggered_2DCylinderMeshConvergence.py "Python fv Wave staggered mesh convergence structured coreflows")
